--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,6 @@
-{% set version = '1.5-6' %}
+{% set version = '1.5-8' %}
+{% set posix = 'm2-' if win else '' %}
+{% set native = 'm2w64-' if win else '' %}
 
 package:
   name: r-magic
@@ -7,20 +9,22 @@ package:
 source:
   fn: magic_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/magic_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/magic/magic_{{ version }}.tar.gz
-  sha256: 1b6c3f5bef0ddc28c4b68894051df5d9c0d4985d9e6ad81892369d0f7fe0298d
+    - {{ cran_mirror }}/src/contrib/magic_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/magic/magic_{{ version }}.tar.gz
+  sha256: 7f8bc26e05003168e9d2dadf64eb9a34b51bc41beba482208874803dee7d6c20
 
 build:
+  merge_build_host: True  # [win]
   number: 0
-  script: R CMD INSTALL --build .
-  skip: True  # [win32]
+  skip: true  # [win32]
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
+    - {{posix}}zip               # [win]
+  host:
     - r-base
     - r-abind
   run:
@@ -29,13 +33,13 @@ requirements:
 
 test:
   commands:
-    - $R -e "library('magic')"  # [not win]
+    - $R -e "library('magic')"           # [not win]
     - "\"%R%\" -e \"library('magic')\""  # [win]
 
 about:
-  home: https://CRAN.R-project.org/package=magic
+  home: https://github.com/RobinHankin/magic.git
   license: GPL-2
-  summary: a collection of efficient, vectorized algorithms for the creation and investigation
+  summary: A collection of efficient, vectorized algorithms for the creation and investigation
     of magic squares and hypercubes, including a variety of functions for the manipulation
     and analysis of arbitrarily dimensioned arrays.  The package includes methods for
     creating normal magic squares of any order greater than 2.  The ultimate intention
@@ -44,7 +48,16 @@ about:
     on the determinant of odd-ordered semimagic squares).  Some antimagic functionality
     is included.  The package also serves as a rebuttal to the often-heard comment "I
     thought R was just for statistics".
+  license_family: GPL2
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'  # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-2'  # [win]
 
 extra:
   recipe-maintainers:
     - ocefpaf
+    - johanneskoester
+    - bgruening
+    - daler
+    - jdblischak
+    - cbrueffer
+    - dbast
