Update to version 1.5-9, update recipe

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.5-8' %}
+{% set version = '1.5-9' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -7,16 +7,15 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: magic_{{ version }}.tar.gz
   url:
     - {{ cran_mirror }}/src/contrib/magic_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/magic/magic_{{ version }}.tar.gz
-  sha256: 7f8bc26e05003168e9d2dadf64eb9a34b51bc41beba482208874803dee7d6c20
+  sha256: fa1d5ef2d39e880f262d31b77006a2a7e76ea38e306aae4356e682b90d6cd56a
 
 build:
-  noarch: generic
   merge_build_host: True  # [win]
-  number: 1000
+  number: 0
+  noarch: generic
   rpaths:
     - lib/R/lib/
     - lib/
@@ -53,10 +52,20 @@ about:
 
 extra:
   recipe-maintainers:
+    - conda-forge/r
     - ocefpaf
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - cbrueffer
-    - dbast
+
+# Package: magic
+# Version: 1.5-9
+# Date: 2018-09-14
+# Title: Create and Investigate Magic Squares
+# Author: Robin K. S. Hankin
+# Depends: R (>= 2.10), abind
+# Description: A collection of efficient, vectorized algorithms for the creation and investigation of magic squares and hypercubes, including a variety of functions for the manipulation and analysis of arbitrarily dimensioned arrays.  The package includes methods for creating normal magic squares of any order greater than 2.  The ultimate intention is for the package to be a computerized embodiment all magic square knowledge, including direct numerical verification of properties of magic squares (such as recent results on the determinant of odd-ordered semimagic squares).  Some antimagic functionality is included.  The package also serves as a rebuttal to the often-heard comment "I thought R was just for statistics".
+# Maintainer: "Robin K. S. Hankin" <hankin.robin@gmail.com>
+# License: GPL-2
+# Packaged: 2018-09-16 20:24:12 UTC; rhankin
+# URL: https://github.com/RobinHankin/magic.git
+# NeedsCompilation: no
+# Repository: CRAN
+# Date/Publication: 2018-09-17 09:00:08 UTC
